menu burger button implemented

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
         <figure class="logotipo"> <!-- logotipo -->
           <img src="images/invie.png" width="186" height="60" alt="Invie logotipo"/>
         </figure>
-        <nav class="menu"> <!-- menu -->
+        <span class="burger-button icon-menu" id="burger-button"></span>
+        <nav class="menu" id="menu"> <!-- menu -->
           <ul>
             <li>
               <a href="index.html">Home</a>
@@ -101,5 +102,15 @@
         </form>
       </div>
     </footer>
+
+    <script>
+      let $burgerButton = document.getElementById('burger-button');
+      let $menu = document.getElementById('menu');
+      
+      $burgerButton.addEventListener('click', function() {
+        $menu.classList.toggle('active');
+      })
+
+    </script>
   </body>
 </html>
