--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8"/>
     <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700|Allerta' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/invie.css"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
     <section id="portada" class="portada background"> <!-- portada -->
@@ -36,7 +37,7 @@
     <section id="guitarras" class="guitarras contenedor"> <!-- guitarras -->
       <h2>Nuestra guitarras</h2><!-- titulo -->
       <article class="guitarra"> <!-- guitarra 1 -->
-        <img class="derecha" src="images/invie-acustica.png" alt="Guitarra Invie Acustica" width="350"/>
+        <img class="derecha" data-src="images/invie-acustica.png" alt="Guitarra Invie Acustica" width="350"/>
         <div class="contenedor-guitarra-a">
           <h3 class="title-b">Invie Acustica</h3>
           <ol>
@@ -47,7 +48,7 @@
         </div>
       </article>
       <article class="guitarra b"> <!-- guitarra 2 -->
-        <img class="izquierda" src="images/invie-classic.png" alt="Guitarra Invie Classic" width="350"/>
+        <img class="izquierda" data-src="images/invie-classic.png" alt="Guitarra Invie Classic" width="350"/>
         <div class="contenedor-guitarra-b">
           <h3 class="title-b">Invie Classic</h3>
           <ol>
@@ -61,7 +62,7 @@
     <footer class="footer">
       <div class="contenedor">
         <div class="contacto">
-          <img src="images/invie-white.png" alt="logotipo blanco"/>
+          <img data-src="images/invie-white.png" alt="logotipo blanco"/>
           <a href="tel:+573024456678"><strong>Telefono</strong> <span>3024456678</span></a>
           <a href="mailto:contacto@invie.com"><strong>E-mail</strong> <span>contacto@invie.com</span></a>
         </div>
@@ -102,13 +103,30 @@
         </form>
       </div>
     </footer>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/blazy/1.8.2/blazy.min.js"></script>
 
     <script>
-      let $burgerButton = document.getElementById('burger-button');
-      let $menu = document.getElementById('menu');
-      
-      $burgerButton.addEventListener('click', function() {
+      var consulta = window.matchMedia('(max-width: 500px)');
+      var $burgerButton = document.getElementById('burger-button');
+      var $menu = document.getElementById('menu');
+      function toggleMenu() {
         $menu.classList.toggle('active');
+        $burgerButton.classList.toggle('icon-close');
+      }
+      consulta.addListener(mediaQuery)
+      function mediaQuery() {
+        if(consulta.matches) {      
+          console.log('se cumplio')
+          $burgerButton.addEventListener('touchstart',toggleMenu)
+        } 
+        else {
+          $burgerButton.removeEventListener('touchstart',toggleMenu)
+          console.log('no se cumplio')
+        }
+      }
+      mediaQuery();
+      var bLazy = new Blazy({
+        selector: 'img'
       })
 
     </script>
